--- a/Term_Project/dbConfig.ini
+++ b/Term_Project/dbConfig.ini
@@ -1,4 +1,6 @@
-username=root
-password=mitra
-dbName=BankATM
-server=localhost
+username=ahoan1
+password=_spr23_0
+dbName=spr23_csc429_ahoan1
+server=csdb.brockport.edu
+dbInstallation=mariadb
+dbClassName=org.mariadb.jdbc.Driver
